@@ -32,16 +32,6 @@ using namespace file_analysis;
 
 #define OCSP_STRING_BUF_SIZE 2048
 
-static IntrusivePtr<Val> get_ocsp_type(RecordVal* args, const char* name)
-	{
-	auto rval = args->Lookup(name);
-
-	if ( ! rval )
-		reporter->Error("File extraction analyzer missing arg field: %s", name);
-
-	return rval;
-	}
-
 static bool OCSP_RESPID_bio(OCSP_BASICRESP* basic_resp, BIO* bio)
 	{
 #if ( OPENSSL_VERSION_NUMBER < 0x10100000L ) || defined(LIBRESSL_VERSION_NUMBER)
