@@ -202,6 +202,9 @@ Deprecated Functionality
 - ``RecordVal::LookupWithDefault(int)`` is deprecated, use
   ``RecordVal::GetFieldOrDefault(int)``.
 
+- ``RecordVal::Lookup(const char*, bool)`` is deprecated, use either
+  ``RecordVal::GetField()`` or ``RecordVal::GetFieldOrDefault()``.
+
 Zeek 3.1.0
 ==========
 
